background resolved - duplicated and flipped original image to create large image that repeatswithout visible borders

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -51,11 +51,11 @@ button,
 .btn {
   font-family: "Domine", serif;
   background-color: var(--dark-brown);
-  background-image: url(./assets/dark_wood_02.jpg);
-  background-repeat: no-repeat;
-  background-size: 1000px 1000px;
-  background-position-x: 70%;
-  background-position-y: 30%;
+  background-image: url(./assets/dark_wood_03_large.jpg);
+  background-repeat: repeat;
+  background-size: 2000px 2000px;
+  background-position-x: 10%;
+  background-position-y: 10%;
   border-radius: 2px;
   color: var(--brass);
   text-decoration: none;
@@ -82,11 +82,11 @@ a {
 #navbar {
   list-style: none;
   background-color: var(--dark-brown);
-  background-image: url(./assets/dark_wood_02.jpg);
+  background-image: url(./assets/dark_wood_03_large.jpg);
   background-repeat: repeat;
-  background-size: 1000px 1000px;
-  background-position-x: 50%;
-  background-position-y: 10%;
+  background-size: 2000px 2000px;
+  /* background-position-x: 50%; */
+  /* background-position-y: 10%; */
   border: 1px solid rgba(181, 166, 66, 0.2);
   border-radius: 3px;
   box-shadow: 0 0 5px black;
@@ -125,12 +125,11 @@ a {
   margin: 2rem 10rem 0 10rem;
   padding: 0.4rem 0;
   background-color: var(--dark-brown);
-  background-image: url(./assets/dark_wood_02.jpg);
+  background-image: url(./assets/dark_wood_03_large.jpg);
   background-repeat: repeat;
-  background-size: 1000px 1000px;
-  background-position: top center;
-  background-position-x: 40%;
-  background-position-y: 20%;
+  background-size: 2000px 2000px;
+  background-position-x: 20%;
+  background-position-y: 10%;
   border-top: 1px solid rgba(181, 166, 66, 0.2);
   border-left: 1px solid rgba(181, 166, 66, 0.2);
   border-right: 1px solid rgba(181, 166, 66, 0.2);
@@ -140,12 +139,11 @@ a {
 
 .shelf-container {
   background-color: var(--dark-brown);
-  background-image: url(./assets/dark_wood_02.jpg);
+  background-image: url(./assets/dark_wood_03_large.jpg);
   background-repeat: repeat;
-  background-size: 1300px 1300px;
-  background-position: top center;
-  background-position-x: 40%;
-  background-position-y: 20%;
+  background-size: 2000px 2000px;
+  background-position-x: 15%;
+  background-position-y: 5%;
   border: 1px solid rgba(181, 166, 66, 0.2);
   border-radius: 3px;
   box-shadow: 0 0 5px black;
@@ -200,10 +198,10 @@ a {
 
 .book-info .details .book-title {
   background-color: var(--dark-brown);
-  background-image: url(./assets/dark_wood_02.jpg);
-  background-repeat: no-repeat;
-  background-size: 1000px 1000px;
-  background-position: top center;
+  background-image: url(./assets/dark_wood_03_large.jpg);
+  background-repeat: repeat;
+  background-size: 2000px 2000px;
+  /* background-position: top center; */
   border: 1px solid rgba(181, 166, 66, 0.2);
   border-radius: 2px;
   box-shadow: 0 0 5px black;
@@ -234,12 +232,11 @@ a {
 .desk,
 .search-container {
   background-color: var(--dark-brown);
-  background-image: url(./assets/dark_wood_02.jpg);
+  background-image: url(./assets/dark_wood_03_large.jpg);
   background-repeat: repeat;
-  background-size: 1000px 1000px;
-  background-position: top center;
-  background-position-x: 40%;
-  background-position-y: 20%;
+  background-size: 2000px 2000px;
+  background-position-x: 5%;
+  background-position-y: 0;
   border: 1px solid rgba(181, 166, 66, 0.2);
   border-radius: 3px;
   box-shadow: 0 0 5px black;
@@ -258,15 +255,28 @@ a {
   justify-content: center;
 }
 
-.results-headers {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  grid-gap: 1rem;
-  text-decoration: underline;
+.search button {
+  display: flex;
+  flex-direction: column;
+  align-content: flex-end;
+  /* justify-content: end; */
 }
 
-/* .results-items {
+.search .search-title {
+  display: flex;
+  justify-content: center;
+}
+
+.results-item {
+  border: 1px solid rgba(181, 166, 66, 0.2);
+  border-radius: 3px;
+  box-shadow: 0 0 9px black;
+  margin: 0.5rem 0;
+  padding: 0.1rem 0.5rem;
+}
+
+.grid-search-item {
   display: grid;
   grid-template-columns: 3fr 1fr;
-  grid-gap: 1rem;
-} */
+  grid-gap: 2rem;
+}
